--- a/登录/reg.html
+++ b/登录/reg.html
@@ -11,8 +11,27 @@
 	</style>
 	<script language=JavaScript>
 		function InputCheck(RegForm){
-			if($RegForm.username.value==""){
+			if(RegForm.username.value==""){
+				alert("用户名不可为空!");
+				RegForm.username.focus();
+				return (false);
+			}
 			
+			if(RegForm.password.value==""){
+				alert("必须设定登录密码!");
+				RegForm.password.focus();
+				return (false);
+			}
+			
+			if(RegForm.repass.value!=RegForm.password.value){
+				alert("两次密码不一致!");
+				RegForm.repass.focus();
+				return (false);
+			}
+			if(RegForm.email.value==""){
+				alert("电子邮箱不能为空！");
+				RegForm.emial.focus();
+				return (false);
 			}
 		}
 	</script>
